YD-19:ADD: added global header

--- a/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_variables.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_variables.scss
@@ -26,6 +26,8 @@ $c-yd-graphite-gray:    #3e4043;
 $c-yd-pine-green:       #324140;
 $c-yd-jet-black:        #202223;
 $c-yd-forest-green:     #488851;
+$c-yd-magenta-plum:     #ab1a67;
+$c-yd-snow-gray:        #f2f2f2;
 
 // Text colors
 $c-yd-gold:             #ffd700;
@@ -118,6 +120,8 @@ $colors: (
     "cloud-gray":       #ddd,
     "ash-gray":         #c7c8c8,
     "copper-brown":     #9f5135,
+    "magenta-plum":     #ab1a67,
+    "snow-gray":        #f2f2f2,
 );
 
 // Typography
