--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_icons_generated.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_icons_generated.scss
@@ -65,10 +65,13 @@ $icons-font: "icons";
 ## Brand custom icon-font (icon.woff2)
 ```html_example
 <i class="icon icon-account" style="font-size: 48px"></i>
+<i class="icon icon-bars" style="font-size: 48px"></i>
 <i class="icon icon-cart" style="font-size: 48px"></i>
+<i class="icon icon-close" style="font-size: 48px"></i>
 <i class="icon icon-cube" style="font-size: 48px"></i>
 <i class="icon icon-dollar" style="font-size: 48px"></i>
 <i class="icon icon-gift-box" style="font-size: 48px"></i>
+<i class="icon icon-menu" style="font-size: 48px"></i>
 <i class="icon icon-search" style="font-size: 48px"></i>
 <i class="icon icon-socials-facebook" style="font-size: 48px"></i>
 <i class="icon icon-socials-instagram" style="font-size: 48px"></i>
@@ -82,23 +85,34 @@ $icons-font: "icons";
 */
 
 $icon-account: "\f101"; // file client/default/svg/icons/account.svg
-$icon-cart: "\f102"; // file client/default/svg/icons/cart.svg
-$icon-cube: "\f103"; // file client/default/svg/icons/cube.svg
-$icon-dollar: "\f104"; // file client/default/svg/icons/dollar.svg
-$icon-gift-box: "\f105"; // file client/default/svg/icons/gift-box.svg
-$icon-search: "\f106"; // file client/default/svg/icons/search.svg
-$icon-socials-facebook: "\f107"; // file client/default/svg/icons/socials-facebook.svg
-$icon-socials-instagram: "\f108"; // file client/default/svg/icons/socials-instagram.svg
-$icon-socials-pinterest: "\f109"; // file client/default/svg/icons/socials-pinterest.svg
-$icon-socials-tiktok: "\f10a"; // file client/default/svg/icons/socials-tiktok.svg
-$icon-socials-twitter: "\f10b"; // file client/default/svg/icons/socials-twitter.svg
+$icon-bars: "\f102"; // file client/default/svg/icons/bars.svg
+$icon-cart: "\f103"; // file client/default/svg/icons/cart.svg
+$icon-close: "\f104"; // file client/default/svg/icons/close.svg
+$icon-cube: "\f105"; // file client/default/svg/icons/cube.svg
+$icon-dollar: "\f106"; // file client/default/svg/icons/dollar.svg
+$icon-gift-box: "\f107"; // file client/default/svg/icons/gift-box.svg
+$icon-menu: "\f108"; // file client/default/svg/icons/menu.svg
+$icon-search: "\f109"; // file client/default/svg/icons/search.svg
+$icon-socials-facebook: "\f10a"; // file client/default/svg/icons/socials-facebook.svg
+$icon-socials-instagram: "\f10b"; // file client/default/svg/icons/socials-instagram.svg
+$icon-socials-pinterest: "\f10c"; // file client/default/svg/icons/socials-pinterest.svg
+$icon-socials-tiktok: "\f10d"; // file client/default/svg/icons/socials-tiktok.svg
+$icon-socials-twitter: "\f10e"; // file client/default/svg/icons/socials-twitter.svg
 
 .icon-account::before {
     content: $icon-account !important;
 }
 
+.icon-bars::before {
+    content: $icon-bars !important;
+}
+
 .icon-cart::before {
     content: $icon-cart !important;
+}
+
+.icon-close::before {
+    content: $icon-close !important;
 }
 
 .icon-cube::before {
@@ -111,6 +125,10 @@ $icon-socials-twitter: "\f10b"; // file client/default/svg/icons/socials-twitter
 
 .icon-gift-box::before {
     content: $icon-gift-box !important;
+}
+
+.icon-menu::before {
+    content: $icon-menu !important;
 }
 
 .icon-search::before {
