--- a/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_bootstrap-variables.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_bootstrap-variables.scss
@@ -146,6 +146,7 @@ $btn-disabled-opacity:        .65 !default;
 $btn-active-box-shadow:       inset 0 3px 5px rgba($black, .125) !default;
 $btn-transition:              color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $btn-border-radius:           rem(25);
+$btn-focus-box-shadow:        none;
 
 // TODO: also used in Bootstrap for buttons. Override on demand
 // $btn-border-width:            $input-btn-border-width;
