YD-269:ADD: footer navigation component

--- a/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
@@ -17,7 +17,7 @@
 @import "flag-icons/sass/flag-icons";
 @import "legacy/components/common";
 @import "base/components/header";
-@import "base/components/footer";
+@import "legacy/components/footer";
 @import "base/components/hero";
 
 /* @import "base/components/headers"; */
