--- a/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_header.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_header.scss
@@ -34,6 +34,10 @@
         display: flex;
         color: $white;
         font-size: rem(16);
+
+        @include hover-and-focus() {
+            color: $white;
+        }
     }
 
     &__title {
