--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_helpers.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_helpers.scss
@@ -1,3 +1,4 @@
 @include build-site-width-helpers($container-max-widths);
 @include build-gap-helpers($spacers, $grid-breakpoints);
 @include build-color-helpers($colors);
+@include build-aspect-ratio-helpers($ratios);
