--- a/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_headlines.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_headlines.scss
@@ -83,6 +83,7 @@ h5,
 .h5,
 h6,
 .h6 {
+    font-weight: $font-weight-base;
     line-height: 1.2;
     color: $headline-color;
 }
@@ -91,7 +92,7 @@ h1,
 .h1 {
     font-size: rem(28);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(22);
     }
 }
@@ -100,7 +101,7 @@ h2,
 .h2 {
     font-size: rem(25);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(21);
     }
 }
@@ -109,7 +110,7 @@ h3,
 .h3 {
     font-size: rem(23);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(19);
     }
 }
@@ -118,7 +119,7 @@ h4,
 .h4 {
     font-size: rem(21);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(18);
     }
 }
@@ -127,7 +128,7 @@ h5,
 .h5 {
     font-size: rem(19);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(17);
     }
 }
@@ -136,7 +137,7 @@ h6,
 .h6 {
     font-size: rem(17);
 
-    @include media-breakpoint-down(lg) {
+    @include media-breakpoint-down(sm) {
         font-size: rem(16);
     }
 }
