--- a/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_variables.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/01_settings/_variables.scss
@@ -124,6 +124,16 @@ $colors: (
     "snow-gray":        #f2f2f2,
 );
 
+// Aspect ratio
+$ratios: (
+    "1-1": "1/1",
+    "1-2": "1/2",
+    "3-4": "3/4",
+    "4-3": "4/3",
+    "9-16": "9/16",
+    "16-9": "16/9",
+);
+
 // Typography
 $base16-14px: 0.875em !default;
 
