YD-291:FIX: fixed global site paddings for full width container

--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
@@ -28,3 +28,10 @@
         flex: 1;
     }
 }
+
+.site-container {
+    @include media-breakpoint-up(md) {
+        padding-left: rem(40);
+        padding-right: rem(40);
+    }
+}
