--- a/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_footer.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_footer.scss
@@ -1,7 +1,3 @@
-.footer-section {
-    border-top: 1px solid #e0e0e0;
-}
-
 .footer-nav {
     padding-top: rem(40);
     padding-bottom: rem(40);
@@ -75,6 +71,7 @@
     background: $c-yd-warm-beige;
     padding-top: rem(20);
     padding-bottom: rem(20);
+    border-bottom: 1px solid $c-yd-silver-gray;
 
     .icon-with-caption {
         color: $c-yd-jet-black;
