YD-00:ADD: Update linter rules

--- a/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_accordions.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_accordions.scss
@@ -68,7 +68,7 @@
         padding-right: rem(30);
         position: relative;
 
-        @include hover-and-focus() {
+        @include hover-and-focus {
             color: $c-yd-jet-black;
         }
 
