--- a/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_buttons.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_buttons.scss
@@ -41,7 +41,7 @@
     background: $c-yd-forest-sage;
     border: rem(1) solid $c-yd-forest-sage;
 
-    @include hover-and-focus() {
+    @include hover-and-focus {
         background-color: $c-yd-forest-green;
         border-color: $c-yd-forest-green;
     }
@@ -52,7 +52,7 @@
     background: $white;
     border: rem(1) solid $black;
 
-    @include hover-and-focus() {
+    @include hover-and-focus {
         color: $white;
         background: $black;
     }
