--- a/cartridges/app_yd_core/cartridge/client/default/scss/experience/components/commerce_components/productSliderTitle.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/experience/components/commerce_components/productSliderTitle.scss
@@ -10,7 +10,7 @@
         &-link {
             margin-bottom: 0;
 
-            @include hover-and-focus() {
+            @include hover-and-focus {
                 color: $c-yd-jet-black;
             }
         }
