--- a/cartridges/app_yd_core/cartridge/client/default/scss/02_tools/_mixins.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/02_tools/_mixins.scss
@@ -66,7 +66,7 @@
     }
 }
 
-@mixin hover-and-focus() {
+@mixin hover-and-focus {
     &:not(.disabled, [disabled]) {
         @include hover {
             @content;
