--- a/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
@@ -5,8 +5,7 @@
 
 // LEGACY CODE
 
-// @import "base/skin/skinVariables";
-@import "base/bootstrap-custom-import"; // review and add only needed for specific cartrige
+@import "base/bootstrap-custom-import"; // review and add only needed for specific cartridge
 
 @import "03_generic/all";
 @import "04_atoms/all";
@@ -19,7 +18,6 @@
 @import "base/components/header";
 @import "base/components/hero";
 
-/* @import "base/components/headers"; */
 @import "base/components/notification";
 @import "base/components/pricing";
 @import "base/components/productTiles";
