YD-268:ADD: Global footer text width fix

--- a/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_footer.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_footer.scss
@@ -35,6 +35,12 @@
             margin-bottom: rem(8);
             list-style: none;
         }
+    
+        &__text-limited {
+            @include media-breakpoint-up(md) {
+                max-width: 75%;
+            }
+        }
     }
 
     .footer-col:last-child {
