--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
@@ -30,6 +30,8 @@
 }
 
 .site-container {
+    max-width: none;
+
     @include media-breakpoint-up(md) {
         padding-left: rem(40);
         padding-right: rem(40);
