--- a/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_inputs.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_inputs.scss
@@ -12,7 +12,8 @@
 */
 
 .a-input,
-input.form-control {
+input.form-control,
+.custom-select {
     font-size: rem(16);
     line-height: 1;
     color: $c-yd-jet-black;
