--- a/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_header.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_header.scss
@@ -214,6 +214,11 @@
             display: block;
             position: absolute;
         }
+
+        .swatch-circle {
+            aspect-ratio: 1/1;
+            object-fit: cover;
+        }
     }
 }
 
