--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_base.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_base.scss
@@ -1,4 +1,5 @@
 @include font-faces($font-brand-primary, $custom-fonts);
+@include font-faces($font-druk-wide, $druk-wide-fonts);
 
 // tag-only base styling
 
