YD-4:FIX: code review fixes

--- a/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
@@ -7,7 +7,7 @@
 
 // @import "base/skin/skinVariables";
 
-@import "base/bootstrap-custom-import"; // review and add only needed for specific cartrige
+@import "base/bootstrap-custom-import"; // review and add only needed for specific cartridge
 
 @import "03_generic/all";
 @import "04_atoms/all";
