YD-4:FIX: updated PLP styles and structure (#30)
* YD-4:FIX: updated PLP styles and structure

* YD-4:FIX: code review fixes

--- a/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/global.scss
@@ -5,6 +5,8 @@
 
 // LEGACY CODE
 
+// @import "base/skin/skinVariables";
+
 @import "base/bootstrap-custom-import"; // review and add only needed for specific cartridge
 
 @import "03_generic/all";
@@ -18,6 +20,8 @@
 @import "base/components/header";
 @import "base/components/hero";
 
+/* @import "base/components/headers"; */
+
 @import "base/components/notification";
 @import "base/components/pricing";
 @import "base/components/productTiles";
@@ -30,3 +34,4 @@
 // END OF LEGACY CODE
 
 @import "06_components/all";
+@import "search";
