YD-89:ADD: updated PDP structure and styling

--- a/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_inputs.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/04_atoms/_inputs.scss
@@ -15,7 +15,7 @@
 input.form-control,
 .custom-select {
     font-size: rem(16);
-    line-height: 1;
+    line-height: normal;
     color: $c-yd-jet-black;
     border: rem(1) solid $c-yd-ash-gray;
     padding: rem(13) rem(15);
