--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_icons_generated.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_icons_generated.scss
@@ -75,6 +75,7 @@ $icons-font: "icons";
 <i class="icon icon-gift-box" style="font-size: 48px"></i>
 <i class="icon icon-menu" style="font-size: 48px"></i>
 <i class="icon icon-search" style="font-size: 48px"></i>
+<i class="icon icon-size-chart" style="font-size: 48px"></i>
 <i class="icon icon-socials-facebook" style="font-size: 48px"></i>
 <i class="icon icon-socials-instagram" style="font-size: 48px"></i>
 <i class="icon icon-socials-pinterest" style="font-size: 48px"></i>
@@ -97,11 +98,12 @@ $icon-dollar: "\f108"; // file client/default/svg/icons/dollar.svg
 $icon-gift-box: "\f109"; // file client/default/svg/icons/gift-box.svg
 $icon-menu: "\f10a"; // file client/default/svg/icons/menu.svg
 $icon-search: "\f10b"; // file client/default/svg/icons/search.svg
-$icon-socials-facebook: "\f10c"; // file client/default/svg/icons/socials-facebook.svg
-$icon-socials-instagram: "\f10d"; // file client/default/svg/icons/socials-instagram.svg
-$icon-socials-pinterest: "\f10e"; // file client/default/svg/icons/socials-pinterest.svg
-$icon-socials-tiktok: "\f10f"; // file client/default/svg/icons/socials-tiktok.svg
-$icon-socials-twitter: "\f110"; // file client/default/svg/icons/socials-twitter.svg
+$icon-size-chart: "\f10c"; // file client/default/svg/icons/size-chart.svg
+$icon-socials-facebook: "\f10d"; // file client/default/svg/icons/socials-facebook.svg
+$icon-socials-instagram: "\f10e"; // file client/default/svg/icons/socials-instagram.svg
+$icon-socials-pinterest: "\f10f"; // file client/default/svg/icons/socials-pinterest.svg
+$icon-socials-tiktok: "\f110"; // file client/default/svg/icons/socials-tiktok.svg
+$icon-socials-twitter: "\f111"; // file client/default/svg/icons/socials-twitter.svg
 
 .icon-account::before {
     content: $icon-account !important;
@@ -145,6 +147,10 @@ $icon-socials-twitter: "\f110"; // file client/default/svg/icons/socials-twitter
 
 .icon-search::before {
     content: $icon-search !important;
+}
+
+.icon-size-chart::before {
+    content: $icon-size-chart !important;
 }
 
 .icon-socials-facebook::before {
