--- a/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/03_generic/_generic.scss
@@ -37,3 +37,11 @@
         padding-right: rem(40);
     }
 }
+
+.carousel-control-prev {
+    left: rem(1);
+}
+
+.carousel-control-next {
+    right: rem(1);
+}
