YD-337:ADD: added pdp recomendations (#48)
* YD-337:ADD: added pdp recomendations

* YD-337:ADD: updated slider settings import

--- a/cartridges/app_yd_core/cartridge/client/default/scss/product/detail.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/product/detail.scss
@@ -49,3 +49,21 @@
         font-size: rem(20);
     }
 }
+
+.recommendations {
+    .swiper-button-prev,
+    .swiper-button-next {
+        color: $c-yd-jet-black;
+        opacity: 0;
+        visibility: hidden;
+        transition: all 0.3s ease;
+    }
+
+    @include hover-and-focus {
+        .swiper-button-prev,
+        .swiper-button-next {
+            opacity: 0.8;
+            visibility: visible;
+        }
+    }
+}
