YD-386:ADD: gift certificate information on order review and order confirmation pages

--- a/cartridges/app_yd_core/cartridge/client/default/scss/legacy/components/_common.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/legacy/components/_common.scss
@@ -21,11 +21,19 @@ input[placeholder] {
     display: none;
 }
 
+.hide-gift-certificates {
+    display: none;
+}
+
 .order-discount {
     color: $success;
 }
 
 .shipping-discount {
+    color: $success;
+}
+
+.gift-certificates-discount {
     color: $success;
 }
 
