YD-380:FIX: Promo text styles.

--- a/cartridges/app_yd_core/cartridge/client/default/scss/product/detail.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/product/detail.scss
@@ -50,6 +50,14 @@
     }
 }
 
+.promotions {
+    color: $c-yd-coral-red;
+
+    button {
+        color: $c-yd-coral-red;
+    }
+}
+
 .recommendations {
     .swiper-button-prev,
     .swiper-button-next {
