YD-142:ADD: Cart Errors Handling

--- a/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_cart.scss
+++ b/cartridges/app_yd_core/cartridge/client/default/scss/06_components/_cart.scss
@@ -18,4 +18,12 @@
     .promo-code-form {
         display: block;
     }
+
+    .cart-error-messaging.cart-error {
+        position: static;
+    }
+
+    .valid-cart-error {
+        min-height: 2rem;
+    }
 }
